<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".students.mariam.myHomework3.MyCalculatorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/calculatorToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/calculator" />

    <TextView
        android:id="@+id/calculatorTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160dp"
        android:gravity="bottom|end"
        android:text="aaaaaa"
        android:textSize="@dimen/_50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorToolbar" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/ActionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/del"
        app:layout_constraintBottom_toTopOf="@id/number1Button"
        app:layout_constraintEnd_toStartOf="@id/equalButton"
        app:layout_constraintStart_toStartOf="@id/calculatorTextView"
        app:layout_constraintTop_toBottomOf="@id/calculatorTextView" />

    <Button
        android:id="@+id/equalButton"
        style="@style/ActionButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/symbol_equal"
        app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="@id/calculatorTextView"
        app:layout_constraintStart_toEndOf="@id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/calculatorTextView" />

    <Button
        android:id="@+id/number1Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_1"
        app:layout_constraintBottom_toTopOf="@id/number4Button"
        app:layout_constraintEnd_toStartOf="@id/number2Button"
        app:layout_constraintStart_toStartOf="@id/deleteButton"
        app:layout_constraintTop_toBottomOf="@id/deleteButton" />

    <Button
        android:id="@+id/number2Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_2"
        app:layout_constraintBottom_toBottomOf="@id/number1Button"
        app:layout_constraintEnd_toStartOf="@id/number3Button"
        app:layout_constraintStart_toEndOf="@id/number1Button"
        app:layout_constraintTop_toTopOf="@id/number1Button" />

    <Button
        android:id="@+id/number3Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_3"
        app:layout_constraintBottom_toBottomOf="@id/number2Button"
        app:layout_constraintEnd_toStartOf="@id/divisionButton"
        app:layout_constraintStart_toEndOf="@id/number2Button"
        app:layout_constraintTop_toTopOf="@+id/number2Button" />

    <Button
        android:id="@+id/divisionButton"
        style="@style/OperatorButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/symbol_divide"
        app:layout_constraintBottom_toBottomOf="@id/number3Button"
        app:layout_constraintEnd_toEndOf="@id/equalButton"
        app:layout_constraintStart_toEndOf="@id/number3Button"
        app:layout_constraintTop_toTopOf="@+id/number3Button" />

    <Button
        android:id="@+id/number4Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_4"
        app:layout_constraintBottom_toTopOf="@+id/number7Button"
        app:layout_constraintEnd_toStartOf="@id/number5Button"
        app:layout_constraintStart_toStartOf="@id/number1Button"
        app:layout_constraintTop_toBottomOf="@id/number1Button" />

    <Button
        android:id="@+id/number5Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_5"
        app:layout_constraintBottom_toBottomOf="@+id/number4Button"
        app:layout_constraintEnd_toStartOf="@id/number6Button"
        app:layout_constraintStart_toEndOf="@id/number4Button"
        app:layout_constraintTop_toTopOf="@+id/number4Button" />

    <Button
        android:id="@+id/number6Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_6"
        app:layout_constraintBottom_toBottomOf="@+id/number5Button"
        app:layout_constraintEnd_toStartOf="@id/subtractionButton"
        app:layout_constraintStart_toEndOf="@id/number5Button"
        app:layout_constraintTop_toTopOf="@+id/number5Button" />

    <Button
        android:id="@+id/subtractionButton"
        style="@style/OperatorButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/symbol_minus"
        app:layout_constraintBottom_toBottomOf="@id/number6Button"
        app:layout_constraintEnd_toEndOf="@id/divisionButton"
        app:layout_constraintStart_toEndOf="@id/number6Button"
        app:layout_constraintTop_toTopOf="@+id/number6Button" />

    <Button
        android:id="@+id/number7Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_7"
        app:layout_constraintBottom_toTopOf="@+id/dotButton"
        app:layout_constraintEnd_toStartOf="@id/number8Button"
        app:layout_constraintStart_toStartOf="@id/number4Button"
        app:layout_constraintTop_toBottomOf="@id/number4Button" />

    <Button
        android:id="@+id/number8Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_8"
        app:layout_constraintBottom_toBottomOf="@+id/number7Button"
        app:layout_constraintEnd_toStartOf="@id/number9Button"
        app:layout_constraintStart_toEndOf="@id/number7Button"
        app:layout_constraintTop_toTopOf="@id/number7Button" />

    <Button
        android:id="@+id/number9Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_9"
        app:layout_constraintBottom_toBottomOf="@id/number8Button"
        app:layout_constraintEnd_toStartOf="@id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@id/number8Button"
        app:layout_constraintTop_toTopOf="@id/number8Button" />

    <Button
        android:id="@+id/multiplicationButton"
        style="@style/OperatorButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/symbol_multiply"
        app:layout_constraintBottom_toBottomOf="@id/number9Button"
        app:layout_constraintEnd_toEndOf="@id/subtractionButton"
        app:layout_constraintStart_toEndOf="@id/number9Button"
        app:layout_constraintTop_toTopOf="@id/number9Button" />

    <Button
        android:id="@+id/dotButton"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/symbol_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/number0Button"
        app:layout_constraintStart_toStartOf="@id/number7Button"
        app:layout_constraintTop_toBottomOf="@id/number7Button" />

    <Button
        android:id="@+id/number0Button"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/number_0"
        app:layout_constraintBottom_toBottomOf="@id/dotButton"
        app:layout_constraintEnd_toStartOf="@id/percentButton"
        app:layout_constraintStart_toEndOf="@id/dotButton"
        app:layout_constraintTop_toTopOf="@id/dotButton" />

    <Button
        android:id="@+id/percentButton"
        style="@style/NumberButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2dp"
        android:text="@string/symbol_percent"
        app:layout_constraintBottom_toBottomOf="@id/number0Button"
        app:layout_constraintEnd_toStartOf="@id/additionButton"
        app:layout_constraintStart_toEndOf="@id/number0Button"
        app:layout_constraintTop_toTopOf="@id/number0Button" />

    <Button
        android:id="@+id/additionButton"
        style="@style/OperatorButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/symbol_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/multiplicationButton"
        app:layout_constraintStart_toEndOf="@id/percentButton"
        app:layout_constraintTop_toBottomOf="@id/multiplicationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>